# Video_Generator_Final

./: .env.example  .gitignore  =2.31.0  requirements.txt
config/: settings.py
docs/: FULL_RUN_LOCAL.md  LOCAL_TESTING.md
pipeline/: claude_presentation.py  frames.py  html_video.py  main.py  pipeline.py  presentation.py  pyproject.toml  scenes.py
pipeline/templates/: frame_base.html  presentation.html.j2  presentation_claude.html.j2
tests/: test_status_updates.py
web/: simulation.py  tasks.py  views.py
web/templates/: result.html  status.html
